--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <section>
         <!-- Card-1 -->
         <div class="cards" id="Card-1">
-          <img src="/asset/icon-sedans.svg" alt="sedans-car-img" />
+          <img src="asset/icon-sedans.svg" alt="sedans-car-img" />
           <h2>SEDANS</h2>
           <p>
             Choose a sedan for its affordability and excellent fuel economy.
@@ -21,7 +21,7 @@
         </div>
         <!-- Card-2 -->
         <div class="cards" id="Card-2">
-          <img src="/asset/icon-suvs (2).svg" alt="suv-car-img" />
+          <img src="asset/icon-suvs (2).svg" alt="suv-car-img" />
           <h2>SUVS</h2>
           <p>
             Take an SUV for its spacious interior, power, and versatility.
@@ -31,7 +31,7 @@
         </div>
         <!-- Card-3 -->
         <div class="cards" id="Card-3">
-          <img src="/asset/icon-luxury (1).svg" alt="luxury-car-img" />
+          <img src="asset/icon-luxury (1).svg" alt="luxury-car-img" />
           <h2>luxury</h2>
 
           <p>
